--- a/python/package.json
+++ b/python/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "serverless-python-demo",
+  "version": "0.0.1",
+  "description": "A Python demo app",
+  "main": "hello.py",
+  "scripts": {
+    "test": "python -m pytest"
+  },
+  "author": "saksofon997",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saksofon997/serverless-unit-tests-dsl.git"
+  },
   "devDependencies": {
     "serverless-offline": "^8.3.1",
     "serverless-python-requirements": "^5.3.0"
